firefox bugs iPhone link focus fix and Meta Description
Added fastclick.js because it is SWEET and makes my iphone buttons work
faster. Removes 300MS delay from button.

fixed firefox parallax background error fixed amazon cdn issue for now

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,9 @@
+<FilesMatch ".(ttf|otf|eot|woff)$">
+<IfModule mod_headers.c>
+Header set Access-Control-Allow-Origin "*"
+</IfModule>
+</FilesMatch>
+
 <IfModule mod_deflate.c>
 
 # Force compression for mangled headers.
