--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Austin Pray
+email: austin@austinpray.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Austin is a full-stack developer focused on pushing the limits of the web as
+  a platform for rich interactive experiences. He is the principal and lead
+  developer at corelaunch.com, a small consulting shop that builds software for
+  the web.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://austinpray.com.com" # the base hostname & protocol for your site
+twitter_username: austinpray
+github_username:  austinpray
 
 # Build settings
 markdown: kramdown
