--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Austin Pray
 byline: writes software for the web.
 email: austin@austinpray.com
 description: > # this means to ignore newlines until "baseurl:"
-  Austin is a full-stack developer focused on pushing the limits of the web as
+  Austin is a full stack developer focused on pushing the limits of the web as
   a platform for rich interactive experiences. He is the principal and lead
   developer at corelaunch.com, a small consulting shop that builds software for
   the web.
