Adds github integration and diqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,8 @@ github_username:  austinpray
 gplus_username: +AustinPray
 stackoverflow: "https://stackoverflow.com/users/1585343/austin-pray"
 
+repo_baseurl: "https://github.com/austinpray/austinpray.com/blob/gh-pages/"
+repo_editurl: "https://github.com/austinpray/austinpray.com/edit/gh-pages/"
+
 # Build settings
 markdown: kramdown
