Adds Deploying Projects with a Build Step Article
Adds article purpose and category

increase sass

Usage enhancement

--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,12 @@ repo_editurl: "https://github.com/austinpray/austinpray.com/edit/gh-pages/"
 
 # Build settings
 markdown: kramdown
+
+defaults:
+  -
+    scope: 
+      path: ""
+      type: posts
+    values:
+      layout: post
+      author: "Austin Pray"
