--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,8 @@ defaults:
 
 gems:
   - jekyll-sitemap
+
+scripts: 
+  d3: "//cdn.jsdelivr.net/d3js/3.5.3/d3.js"
+  lodash: "//cdn.jsdelivr.net/lodash/3.0.0/lodash.js"
+  activity: "/scripts/activity.js"
