--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compileMatt": "babel scripts/matt.js --out-file scripts/matt-compiled.js --source-maps",
-    "watchcompilematt": "babel scripts/matt.js --watch --out-file scripts/matt-compiled.js --source-maps"
+    "compileMatt": "webpack",
+    "dev": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,17 @@
   },
   "homepage": "https://github.com/austinpray/austinpray.com#readme",
   "devDependencies": {
-    "babel-cli": "^6.16.0"
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.11",
+    "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-runtime": "^6.11.6",
+    "lodash": "^4.16.2",
+    "marked": "^0.3.6"
   }
 }
