--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: austin@austinpray.com
 description: > # this means to ignore newlines until "baseurl:"
   Austin is a full stack developer focused on pushing the limits of the web as
   a platform for rich interactive experiences. He is the principal and lead
-  developer at corelaunch.com, a small consulting shop that builds software for
+  developer at corelaunch.com, a boutique consulting shop that builds software for
   the web.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://austinpray.com" # the base hostname & protocol for your site
