--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Austin is a full stack developer focused on pushing the limits of the web as
   a platform for rich interactive experiences.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://austinpray.com" # the base hostname & protocol for your site
-twitter_username: austinpray
+url: "https://austinpray.com" # the base hostname & protocol for your site
 github_username:  austinpray
-gplus_username: +AustinPray
 stackoverflow: "https://stackoverflow.com/users/1585343/austin-pray"
 
 repo_baseurl: "https://github.com/austinpray/austinpray.com/blob/gh-pages/"
@@ -34,16 +32,7 @@ defaults:
       layout: post
       author: "Austin Pray"
 
-gems:
+plugins:
   - jekyll-sitemap
 
-styles:
-  katex: "https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css"
-
-scripts: 
-  d3: "https://cdn.jsdelivr.net/d3js/3.5.3/d3.js"
-  lodash: "https://cdn.jsdelivr.net/lodash/3.0.0/lodash.js"
-  activity: "/scripts/activity.js"
-  katex: "https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"
-
-exclude: [node_modules, package.json, npm-debug.log, scss]
+exclude: [Dockerfile, docker-compose.yml, .editorconfig, .gitignore, CNAME, Gemfile, Gemfile.lock, README.md, .idea]
