Move from jekyll to hugo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-_site
-.sass-cache
+### Hugo ###
+# Generated files by hugo
+/public/
+/resources/_gen/
 
-node_modules
-.idea
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
