--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Austin Pray
-site_title: Austin Pray · Full Stack Developer in Dallas, TX
+site_title: Austin Pray · Full Stack Developer
 byline: writes software for the web.
 email: austin@austinpray.com
 description: > # this means to ignore newlines until "baseurl:"
